Fixed alignment of the logo in relation to other menus. #82

--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -35,7 +35,7 @@ body {
   margin: 20px 0;
 }
 
-.container > .navbar-brand {
+.navbar-header > .navbar-brand {
 	float: left;
 	padding: 9px;
 	font-size: 18px;
